changed the cover photo

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
           <img src="images/church.svg" alt="Templom">
           <span>Mátyás-templom</span>
           <span>1014 Budapest, Szentháromság tér 2.</span>
-        </div><!-- /.blurb -->
+        </div>
         <div class="blurb">
           <h3>Fotózás</h3>
           <img src="images/photo-camera.svg" alt="Fotózás">
           <span>FIXME-helyszín</span>
           <span>FIXME-pontoscím</span>
-        </div><!-- /.blurb -->
+        </div>
         <div class="blurb">
           <h3>Lakodalom</h3>
           <img src="images/party.svg" alt="Lakodalom">
           <span>Manna Lounge</span>
           <span>1013 Budapest, Palota út 17.</span>
-        </div><!-- /.blurb -->
+        </div>
       </div>
-    </section><!-- /.locations -->
+    </section> 
     <section class="program">
       <h2>Program</h2>
       <div class="program-wrapper">
