--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brigi és Bálint</title>
+	<title>Brigi & Bálint</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Muli:400,700|Libre+Baskerville:300,400,700&amp;subset=latin-ext" rel="stylesheet">
+  <script src="https://use.fontawesome.com/2b18d0cc44.js"></script>
 </head>
 <body>
   <header class="cover">
@@ -14,7 +16,7 @@
         <span class="tagline">Ünnepelj velünk</span>
         <h1>Brigi & Bálint esküvője</h1>
         <span class="date">2017.07.01.</span>
-      </div><!-- /.hero-text -->
+      </div>
   </header>
   <main>
     <section class="locations">
@@ -29,8 +31,8 @@
         <div class="blurb">
           <h3>Fotózás</h3>
           <img src="images/photo-camera.svg" alt="Fotózás">
-          <span>FIXME-helyszín</span>
-          <span>FIXME-pontoscím</span>
+          <span>Mátyás-templom | Halászbástya</span>
+          <span>1014 Budapest, Szentháromság tér 2.</span>
         </div>
         <div class="blurb">
           <h3>Lakodalom</h3>
@@ -53,29 +55,16 @@
           <li>... - 4:00 – Táncoló talpak</li>
         </ul>
       </div>
-    </section><!-- /.program -->
+    </section>
     <section class="gifts">
       <h2>Nászajándék</h2>
-      <p id="gift-tagline">Három dolognak örülünk nagyon:</p>
+      <p>Mi annak örülünk, ha te itt vagy velünk, úgyhogy arra szeretnénk kérni, hogy az ajándék miatt ne aggódj.</p>
       <div class="blurb-wrapper">
         <div class="blurb">
-          <h3>Könyveknek</h3>
-          <img src="images/gifts.svg" alt="Könyvek">
-          <span>Itt találod, hogy milyen könyvek vannak már meg nekünk.</span>
-        </div><!-- /.blurb -->
-        <div class="blurb">
-          <h3>Társasjátékoknak</h3>
           <img src="images/bear.svg" alt="Játékok">
-          <span>Itt látod, hogy milyen játékaink vannak már.</span>
-        </div><!-- /.blurb -->
-        <div class="blurb">
-          <h3>Pénznek</h3>
-          <img src="images/just-married.svg" alt="Pénz">
-          <span>A jövőbeli lakásunkra gyűjtünk.</span>
-        </div><!-- /.blurb -->
-      </div>
-      <p>Ha a háromból választasz egyet, mi azzal tökéletesen boldogok leszünk.</p>
-    </section><!-- /.gifts -->
+          <span id="gift-reassure">Csak gyere el és érezd jól magad.</span>
+        </div>
+    </section>
     <section class="faq">
       <h2>Kérdések & válaszok</h2>
       <div class="qa-wrapper">
@@ -83,26 +72,22 @@
           <h3>Utazás és szállás</h3>
           <div class="qa">
             <p><strong>Lesz szervezett utazás?</strong></p>
-            <p>FIXME</p>
+            <p>Szervezett odaút nem lesz, a Mátyás-templom előtt találkozunk 13:15-kor.</p>
           </div>
           <div class="qa">
             <p><strong>Hol lehet parkolni?</strong></p>
-            <p>FIXME</p>
+            <p>Hétvégén ingyen parkolhatsz az I. kerületben, a helyszínek pedig pár perc sétára vannak egymástól, így autóra nem lesz szükséged.</p>
           </div>
           <div class="qa">
             <p><strong>Hogyan jutunk haza?</strong></p>
-            <p>FIXME</p>
+            <p>A 916-os busz egész éjszaka jár a várban és az összes nagyobb közlekedési csomópontot érinti a városban.</p>
           </div>
-          <div class="qa">
-            <p><strong>Hol tudok megszállni az éjjel?</strong></p>
-            <p>FIXME</p>
-          </div>
-        </div><!-- /.qa-column -->
+        </div>
         <div class="qa-column">
           <h3>Étkezés és programok</h3>
           <div class="qa">
             <p><strong>Egy meglepetés programot szeretnék csinálni a lagzin, kivel egyeztessek?</strong></p>
-            <p>FIXME</p>
+            <p>Diczig Herminével. Írj neki egy emailt a <a href="mailto:diczig.hermine@gmail.com">diczig.hermine@gmail.com</a> címre.</p>
           </div>
           <div class="qa">
             <p><strong>Lesz-e menyasszonytánc?</strong></p>
@@ -110,31 +95,46 @@
           </div>
           <div class="qa">
             <p><strong>Hogyan öltözzek fel, mi a dress code?</strong></p>
-            <p>Ahogy kényelmesen érzed magad. Ha segítség, akkor szerintünk a smart casual / business casual tökéletes női vonalon, smart casual / informal férfi vonalon.</p>
+            <p>Ahogy kényelmesen érzed magad. Ha segítség, akkor szerintünk a <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799" target="_blank">smart casual</a> / <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=business+casual+women" target="_blank">business casual</a> tökéletes női vonalon, <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=smart+casual+men" target="_blank">smart casual</a> / <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=informal+dress+code+for+men&imgrc=_" target="_blank">informal</a> férfi vonalon.</p>
+          </div>
+          <div class="qa">
+            <p><strong>Kell-e valamire figyelnem a templomban?</strong></p>
+            <p>A hölgyeknek annyira, hogy a válluk ne legyen fedetlen.</p>
           </div>
           <div class="qa">
             <p><strong>Speciális ételt szeretnék (vegán, glukózmentes, laktózmentes).</strong></p>
-            <p>FIXME</p>
+            <p>Írj egy emailt nekünk <a href="mailto:brigibalinteskuvo@gmail.com">ide</a> és megbeszéljük.</p>
           </div>
-        </div><!-- /.qa-column -->
+        </div>
         <div class="qa-column">
           <h3>Egyéb apróságok</h3>
           <div class="qa">
-            <p><strong>Gyerekeket hozhatjuk?</strong></p>
-            <p>FIXME</p>
+            <p><strong>Gondom / kérdésem van az esküvő napján. Kit keressek?</strong></p>
+            <p>Nyírő Zsanettet a <a href="tel:+36305015547">+36 30 501 5547</a> számon.</p>
           </div>
-        </div><!-- /.qa-column -->
+          <div class="qa">
+            <p><strong>Gyerekeket hozhatjuk?</strong></p>
+            <p>Persze, bátran. Nekik külön édességsarokkal készülünk.</p>
+          </div>
+          <div class="qa">
+            <p><strong>Kutyával jöhetünk?</strong></p>
+            <p>Igen, a Manna Étterem kutyabarát. Ha King Charles spániel lány(oka)t hozol, annak külön örülni fogunk.</p>
+          </div>
+        </div>
       </div>
-    </section><!-- /.faq -->
+    </section>
     <section class="contact">
       <h2>Kapcsolat</h2>
       <p>Ha kérdésed lenne, keress minket bátran.</p>
-      <p>Telefon: +36 30 000 0000</p>
-      <p>Email: hello@valami.hu</p>
-    </section><!-- /.contact -->
+      <p>Telefon: <a href="tel:+36306314793">+36 30 631 4793</a> (Brigi) / <a href="tel:+36308412533">+36 30 841 2533</a> (Bálint)</p>
+      <p>Email: <a href="mailto:brigibalinteskuvo@gmail.com">brigibalinteskuvo@gmail.com</a></p>
+    </section>
   </main>
   <footer>
-    <p>Made with love in Budapest &copy;2017</p>
+    <div class="footer-wrapper">
+      <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Budapest &copy;2017</small>
+      <small>Icons made by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small>
+    </div>
   </footer>
 </body>
 </html>
