adjusted footer copyright to appear nicer

--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
   </main>
   <footer>
     <div class="footer-wrapper">
-      <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Budapest &copy;2017</small>
-      <small>Icons made by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small>
+      <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Budapest &copy;2017 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small>
     </div>
   </footer>
 </body>
