refactored codebase, implemented feedback from code reviews and updated the readme

--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brigi & Bálint</title>
+	<title>Brigi &amp; Bálint</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Muli:400,700|Libre+Baskerville:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <script src="https://use.fontawesome.com/2b18d0cc44.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes%7CMuli:400,700%7CLibre+Baskerville:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
   <header class="cover">
+    <div class="hero-text-wrapper">
       <div class="hero-text">
-        <span class="tagline">Ünnepelj velünk</span>
-        <h1>Brigi & Bálint esküvője</h1>
-        <span class="date">2017.07.01.</span>
+        <div class="tagline">Ünnepelj velünk</div>
+        <h1>Brigi &amp; Bálint esküvője</h1>
+        <span class="date">2017. július 1.</span>
       </div>
+    </div>
   </header>
   <main>
     <section class="locations">
       <h2>Helyszínek</h2>
-      <div class="blurb-wrapper">
         <div class="blurb">
           <h3>Egyházi szertartás</h3>
           <img src="images/church.svg" alt="Templom">
-          <span>Mátyás-templom</span>
-          <span>1014 Budapest, Szentháromság tér 2.</span>
+          <div>Mátyás-templom</div>
+          <div>1014 Budapest, Szentháromság tér 2.</div>
         </div>
         <div class="blurb">
           <h3>Fotózás</h3>
           <img src="images/photo-camera.svg" alt="Fotózás">
-          <span>Mátyás-templom | Halászbástya</span>
-          <span>1014 Budapest, Szentháromság tér 2.</span>
+          <div>Mátyás-templom | Halászbástya</div>
+          <div>1014 Budapest, Szentháromság tér 2.</div>
         </div>
         <div class="blurb">
           <h3>Lakodalom</h3>
           <img src="images/party.svg" alt="Lakodalom">
-          <span>Manna Lounge</span>
-          <span>1013 Budapest, Palota út 17.</span>
+          <div>Manna Lounge</div>
+          <div>1013 Budapest, Palota út 17.</div>
         </div>
-      </div>
-    </section> 
+    </section>
     <section class="program">
       <h2>Program</h2>
       <div class="program-wrapper">
@@ -59,68 +58,41 @@
     <section class="gifts">
       <h2>Nászajándék</h2>
       <p>Mi annak örülünk, ha te itt vagy velünk, úgyhogy arra szeretnénk kérni, hogy az ajándék miatt ne aggódj.</p>
-      <div class="blurb-wrapper">
-        <div class="blurb">
-          <img src="images/bear.svg" alt="Játékok">
-          <span id="gift-reassure">Csak gyere el és érezd jól magad.</span>
-        </div>
+      <img src="images/bear.svg" alt="Ajándékok">
+      <p>Csak gyere el és érezd jól magad.</p>
     </section>
     <section class="faq">
-      <h2>Kérdések & válaszok</h2>
-      <div class="qa-wrapper">
-        <div class="qa-column">
-          <h3>Utazás és szállás</h3>
-          <div class="qa">
-            <p><strong>Lesz szervezett utazás?</strong></p>
-            <p>Szervezett odaút nem lesz, a Mátyás-templom előtt találkozunk 13:15-kor.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Hol lehet parkolni?</strong></p>
-            <p>Hétvégén ingyen parkolhatsz az I. kerületben, a helyszínek pedig pár perc sétára vannak egymástól, így autóra nem lesz szükséged.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Hogyan jutunk haza?</strong></p>
-            <p>A 916-os busz egész éjszaka jár a várban és az összes nagyobb közlekedési csomópontot érinti a városban.</p>
-          </div>
-        </div>
-        <div class="qa-column">
-          <h3>Étkezés és programok</h3>
-          <div class="qa">
-            <p><strong>Egy meglepetés programot szeretnék csinálni a lagzin, kivel egyeztessek?</strong></p>
-            <p>Diczig Herminével. Írj neki egy emailt a <a href="mailto:diczig.hermine@gmail.com">diczig.hermine@gmail.com</a> címre.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Lesz-e menyasszonytánc?</strong></p>
-            <p>Nem lesz.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Hogyan öltözzek fel, mi a dress code?</strong></p>
-            <p>Ahogy kényelmesen érzed magad. Ha segítség, akkor szerintünk a <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799" target="_blank">smart casual</a> / <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=business+casual+women" target="_blank">business casual</a> tökéletes női vonalon, <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=smart+casual+men" target="_blank">smart casual</a> / <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=informal+dress+code+for+men&imgrc=_" target="_blank">informal</a> férfi vonalon.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Kell-e valamire figyelnem a templomban?</strong></p>
-            <p>A hölgyeknek annyira, hogy a válluk ne legyen fedetlen.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Speciális ételt szeretnék (vegán, glukózmentes, laktózmentes).</strong></p>
-            <p>Írj egy emailt nekünk <a href="mailto:brigibalinteskuvo@gmail.com">ide</a> és megbeszéljük.</p>
-          </div>
-        </div>
-        <div class="qa-column">
-          <h3>Egyéb apróságok</h3>
-          <div class="qa">
-            <p><strong>Gondom / kérdésem van az esküvő napján. Kit keressek?</strong></p>
-            <p>Nyírő Zsanettet a <a href="tel:+36305015547">+36 30 501 5547</a> számon.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Gyerekeket hozhatjuk?</strong></p>
-            <p>Persze, bátran. Nekik külön édességsarokkal készülünk.</p>
-          </div>
-          <div class="qa">
-            <p><strong>Kutyával jöhetünk?</strong></p>
-            <p>Igen, a Manna Étterem kutyabarát. Ha King Charles spániel lány(oka)t hozol, annak külön örülni fogunk.</p>
-          </div>
-        </div>
+      <h2>Kérdések &amp; válaszok</h2>
+      <div class="question-group">
+        <h3>Utazás és szállás</h3>
+        <p class="question">Lesz szervezett utazás?</p>
+        <p class="answer">Szervezett odaút nem lesz, a Mátyás-templom előtt találkozunk 13:15-kor.</p>
+        <p class="question">Hol lehet parkolni?</p>
+        <p class="answer">Hétvégén ingyen parkolhatsz az I. kerületben, a helyszínek pedig pár perc sétára vannak egymástól, így autóra nem lesz szükséged.</p>
+        <p class="question">Hogyan jutunk haza?</p>
+        <p class="answer">A 916-os busz egész éjszaka jár a várban és az összes nagyobb közlekedési csomópontot érinti a városban.</p>
+      </div>
+      <div class="question-group">
+        <h3>Étkezés és programok</h3>
+        <p class="question">Egy meglepetés programot szeretnék csinálni a lagzin, kivel egyeztessek?</p>
+        <p class="answer">Diczig Herminével. Írj neki egy emailt a <a href="mailto:diczig.hermine@gmail.com">diczig.hermine@gmail.com</a> címre.</p>
+        <p class="question">Lesz-e menyasszonytánc?</p>
+        <p class="answer">Nem lesz.</p>
+        <p class="question">Hogyan öltözzek fel, mi a dress code?</p>
+        <p class="answer">Ahogy kényelmesen érzed magad. Ha segítség, akkor szerintünk a <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799" target="_blank">smart casual</a> / <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=business+casual+women" target="_blank">business casual</a> tökéletes női vonalon, <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=smart+casual+men" target="_blank">smart casual</a> / <a href="https://www.google.hu/search?q=smart+casual+women&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiJt6XO0PLTAhVLXSwKHQESB6gQ_AUICigB&biw=1440&bih=799#tbm=isch&q=informal+dress+code+for+men&imgrc=_" target="_blank">informal</a> férfi vonalon.</p>
+        <p class="question">Kell-e valamire figyelnem a templomban?</p>
+        <p class="answer">A hölgyeknek annyira, hogy a válluk ne legyen fedetlen.</p>
+        <p class="question">Speciális ételt szeretnék (vegán, glukózmentes, laktózmentes).</p>
+        <p class="answer">Írj egy emailt nekünk <a href="mailto:brigibalinteskuvo@gmail.com">ide</a> és megbeszéljük.</p>
+      </div>
+      <div class="question-group">
+        <h3>Egyéb apróságok</h3>
+        <p class="question">Gondom / kérdésem van az esküvő napján. Kit keressek?</p>
+        <p class="answer">Nyírő Zsanettet a <a href="tel:+36305015547">+36 30 501 5547</a> számon.</p>
+        <p class="question">Gyerekeket hozhatjuk?</p>
+        <p class="answer">Persze, bátran. Nekik külön édességsarokkal készülünk.</p>
+        <p class="question">Kutyával jöhetünk?</p>
+        <p class="answer">Igen, a Manna Étterem kutyabarát. Ha King Charles spániel lány(oka)t hozol, annak külön örülni fogunk.</p>
       </div>
     </section>
     <section class="contact">
@@ -132,7 +104,7 @@
   </main>
   <footer>
     <div class="footer-wrapper">
-      <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Budapest &copy;2017 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small>
+      <p><small>Made with heart in Budapest &copy;2017 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small></p>
     </div>
   </footer>
 </body>
